--- a/copy/opt/local/etc/nginx/nginx.conf
+++ b/copy/opt/local/etc/nginx/nginx.conf
@@ -35,6 +35,7 @@ http {
 		listen [::]:443 ssl;
 		server_name _;
 
+		location /.well-known/acme-challenge/ { root /var/letsencrypt/acme/; }
 		location / {
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Protocol https;
